--- a/reservation.html
+++ b/reservation.html
@@ -23,7 +23,7 @@
         <nav>
             <img src="logo.png" alt="Logo">
             <ul>
-              <li><a href="menu.html">Menu</a></li>
+              <li><a href="menu.php">Menu</a></li>
                 <li><a href="reservation.html">Reservation</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.php">Contact</a></li>
